--- a/src/app/components/postBoard/postBoard.component.scss
+++ b/src/app/components/postBoard/postBoard.component.scss
@@ -11,32 +11,42 @@
     justify-content: center;
   }
 
+
   .grid-body-section {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    align-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 1rem;
+    justify-items: center;
+  }
+
+  @keyframes appearance {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
 
   .box-container {
-    padding: 10px;
-  }
+    animation-name: appearance;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
 
-  .note-tile-container {
-    max-width: 160px;
-    max-height: 108px;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    @for $i from 2 through 20 {
+      &:nth-child(#{$i}){
+        animation-delay: 100ms * $i;
+      }
+    }
   }
 
   .new-note {
-    width: 182px;
+    max-width: 182px;
     height: 127px;
-    margin: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 182px;
     background-color: #abaaa1;
   }
 
@@ -46,7 +56,7 @@
     border-bottom: 1px dashed;
   }
 
-  @media (max-width: 558px) {
+  @media (max-width: 432px) {
     .box-container {
       display: flex;
       justify-content: center;
@@ -54,6 +64,7 @@
     }
 
     .new-note {
+      max-width: 100%;
       width: 100%;
       margin: auto;
       position: sticky;
